[gd_scene load_steps=3 format=3 uid="uid://ccgqxkwf5npbv"]

[ext_resource type="FontFile" uid="uid://jv0itu46v2vp" path="res://src/assets/fonts/RevMiniPixel.ttf" id="1_dcxte"]
[ext_resource type="Script" path="res://src/scripts/death_menu.gd" id="1_ooc6y"]

[node name="death_menu" type="CanvasLayer"]
visible = false
script = ExtResource("1_ooc6y")

[node name="bg_overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.254902)

[node name="title_holder" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -108.0
offset_top = 122.0
offset_right = 108.0
offset_bottom = 173.0
grow_horizontal = 2

[node name="Label" type="Label" parent="title_holder"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_dcxte")
theme_override_font_sizes/font_size = 47
text = "You Died!"

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.5
offset_top = -88.0
offset_right = 225.5
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2

[node name="restart_btn" type="Button" parent="menu_holder"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_dcxte")
theme_override_font_sizes/font_size = 47
text = "RESTART"

[node name="back_btn" type="Button" parent="menu_holder"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_dcxte")
theme_override_font_sizes/font_size = 47
text = "BACK TO MAIN MENU"

[node name="quit_btn" type="Button" parent="menu_holder"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_dcxte")
theme_override_font_sizes/font_size = 47
text = "QUIT GAME"

[connection signal="pressed" from="menu_holder/restart_btn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="menu_holder/back_btn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="menu_holder/quit_btn" to="." method="_on_quit_btn_pressed"]
